Closed
Bug 779003
Opened 14 years ago
Closed 13 years ago
Css bug (pagination in direction rtl, only in Firefox 14)
Categories
(Core :: Layout, defect)
Tracking
()
VERIFIED
FIXED
mozilla17
People
(Reporter: nl.student, Assigned: smontagu)
References
Details
(Keywords: regression, rtl)
Attachments
(2 files)
|
992 bytes,
text/html
|
Details | |
|
5.20 KB,
patch
|
roc
:
review+
lsblakk
:
approval-mozilla-aurora+
lsblakk
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:14.0) Gecko/20100101 Firefox/14.0.1
Build ID: 20120713134347
Steps to reproduce:
I update firfox to v 14
I have a probleem with pagination in firefox 14.
the probleem is only in firefox, but if i use firebug the pagination is good, but if i close firebug i get de same problem.
You kan watch de bug here in this site : http://www.allofan.com/openblog/#searchPaginationFooter
Sorry for my bad english
Greeting
Simo
Actual results:
I have a probleem with pagination in firefox 14.
the probleem is only in firefox, but if i use firebug the pagination is good, but if i close firebug i get de same problem.
You kan watch de bug here in this site : http://www.allofan.com/openblog/#searchPaginationFooter
Expected results:
You kan watch de bug here in this site : http://www.allofan.com/openblog/#searchPaginationFooter
Comment 1•14 years ago
|
||
Regression window(m-c)
Good:
http://hg.mozilla.org/mozilla-central/rev/9ff494dfc9b0
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:14.0) Gecko/20120319 Firefox/14.0a1 ID:20120320012441
Bad:
http://hg.mozilla.org/mozilla-central/rev/ee554888d071
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:14.0) Gecko/20120320 Firefox/14.0a1 ID:20120320034040
Pushlog:
http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=9ff494dfc9b0&tochange=ee554888d071
Regression window(m-i)
Good:
http://hg.mozilla.org/integration/mozilla-inbound/rev/b3e48b6d942b
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:14.0) Gecko/20120319 Firefox/14.0a1 ID:20120319155237
Bad:
http://hg.mozilla.org/integration/mozilla-inbound/rev/fb2cb3d55cb4
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:14.0) Gecko/20120319 Firefox/14.0a1 ID:20120319162341
Pushlog:
http://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=b3e48b6d942b&tochange=fb2cb3d55cb4
Suspected: Bug 712600
And related to Bug 775687
Updated•14 years ago
|
Updated•14 years ago
|
Updated•14 years ago
|
Status: UNCONFIRMED → NEW
Ever confirmed: true
Comment 2•14 years ago
|
||
Thank you for the suspected bugs, passing this to Simon to look into this regression and we'll track for release since this seems like a noticeable user pain issue.
Assignee: nobody → smontagu
status-firefox15:
--- → affected
status-firefox16:
--- → affected
status-firefox17:
--- → affected
| Assignee | ||
Comment 3•13 years ago
|
||
The bug was caused by empty inline frames created in SplitInlineAncestors which messed up bidi reordering because (being empty) they didn't have any descendants with embedding level set.
The patch just moves the condition
if (!frame || frame->GetNextSibling())
from bug 712600 so that the calls to CreateContinuingFrame and InsertFrames are also in the if {} block
Attachment #651496 -
Flags: review?(roc)
Attachment #651496 -
Flags: review?(roc) → review+
| Assignee | ||
Comment 4•13 years ago
|
||
Flags: in-testsuite+
Comment 5•13 years ago
|
||
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla17
| Assignee | ||
Comment 6•13 years ago
|
||
Comment on attachment 651496 [details] [diff] [review]
Don't create empty frames in SplitInlineAncestors
[Approval Request Comment]
Bug caused by (feature/regressing bug #): 712600
User impact if declined: visible regression in ordering on many rtl sites (forums, blogs and similar) with multi-page ui like http://www.allofan.com/openblog/#searchPaginationFooter
Testing completed (on m-c, etc.): On m-c since 2012-08-14
Risk to taking this patch (and alternatives if risky): Minimal
String or UUID changes made by this patch: None
Attachment #651496 -
Flags: approval-mozilla-beta?
Attachment #651496 -
Flags: approval-mozilla-aurora?
Comment 7•13 years ago
|
||
Comment on attachment 651496 [details] [diff] [review]
Don't create empty frames in SplitInlineAncestors
Would have been nice to have this earlier in the week to get it into beta 5, but it's enough of a user pain issue that I'll approve for beta even this late in the cycle. Will add qawanted to make sure this is verified before 15 goes out the door.
Attachment #651496 -
Flags: approval-mozilla-beta?
Attachment #651496 -
Flags: approval-mozilla-beta+
Attachment #651496 -
Flags: approval-mozilla-aurora?
Attachment #651496 -
Flags: approval-mozilla-aurora+
| Assignee | ||
Comment 8•13 years ago
|
||
Please use the *verifyme* keyword instead of *qawanted* to call out for QA verification, thanks.
Comment 10•13 years ago
|
||
Able to see the pagination issue on FF15b5.
Verified fixed on FF 15b6: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:15.0) Gecko/20100101 Firefox/15.0
Comment 11•13 years ago
|
||
Verified fixed on:
FF 16b4: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:16.0) Gecko/20100101 Firefox/16.0
FF 17.0a2 (2012-09-19): Mozilla/5.0 (Windows NT 6.1; WOW64; rv:17.0) Gecko/17.0 Firefox/17.0
Status: RESOLVED → VERIFIED
Keywords: verifyme
Depends on: 793233
You need to log in
before you can comment on or make changes to this bug.
Description
•