Don't split inline ancestors of bidi frames if we don't have any child frames after the split. Bug 779003, r=roc, a=lsblakk